[package]
name = "binswap"
version = "0.1.0"
authors = ["Cameron Allan <cameronallandev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
semver = "0.9.0"